@@ -37,7 +37,7 @@ $link_target = 'main';
 		<ul class="navsectionlinks">
 			<li><a href="<?php echo $cfg["cgi_base_url"];?>/tac.cgi" target="<?php echo $link_target;?>">Tactical Overview</a></li>
 			<li>
-				<a href="map.html?host=all" target="<?php echo $link_target;?>">Map</a>
+				<a href="map.php?host=all" target="<?php echo $link_target;?>">Map</a>
 				<a href="<?php echo $cfg["cgi_base_url"];?>/statusmap.cgi?host=all" target="<?php echo $link_target;?>">(Legacy)</a>
 			</li>
 			<li><a href="<?php echo $cfg["cgi_base_url"];?>/status.cgi?hostgroup=all&amp;style=hostdetail" target="<?php echo $link_target;?>">Hosts</a></li>
